# tmiscpy

./: .gitignore  README.md  conda_tmiscpy.sh  pyproject.toml  requirements.devel.txt  setup.py
tmiscpy/: __init__.py  alignment.py  audio_tools.py  functions.py  kaldi_tools.py  parse_xml.py  wavaudio.py
